--- a/src/main/res/layout/comp_pullup_trip.xml
+++ b/src/main/res/layout/comp_pullup_trip.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <merge xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:parentTag="com.maddin.echtzeyt.components.TripPullup">
@@ -19,7 +19,7 @@
             android:layout_width="wrap_content"
             android:layout_gravity="center_vertical"
             android:layout_marginEnd="0dp"
-            android:layout_marginRight="0dp"
+            android:layout_marginRight="@null"
             android:ellipsize="end"
             android:gravity="center_horizontal"
             android:maxLines="@null"
@@ -44,7 +44,7 @@
             style="@style/Theme.Echtzeyt.TextView.Pullup.Title"
             android:layout_width="wrap_content"
             android:layout_marginEnd="4dp"
-            android:layout_marginRight="4dp"
+            android:layout_marginRight="@null"
             android:gravity="center_horizontal"
             android:maxLines="@null"
             android:singleLine="true"
