first working prototype with vtm instead of osmdroid -> finally vector maps

--- a/src/main/res/layout/activity_map.xml
+++ b/src/main/res/layout/activity_map.xml
@@ -7,13 +7,12 @@
     android:theme="@style/Theme.Echtzeyt"
     tools:context=".activities.MapActivity" >
 
-    <org.osmdroid.views.MapView
+    <org.oscim.android.MapView
         android:id="@+id/mapView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/background"
         android:clickable="true"
-        android:contentDescription="@string/about"
+        android:contentDescription="@string/appName"
         android:focusable="true"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
