--- a/src/main/res/values/values.xml
+++ b/src/main/res/values/values.xml
@@ -39,8 +39,8 @@
     <dimen name="realtimeinfo_textsize_icon">14sp</dimen>
     <dimen name="realtimeinfo_padding">1.2dp</dimen>
 
-    <dimen name="stationmarker_width">100dp</dimen> <!-- maximum width, it will be scaled down by the classes in StopMarker.kt -->
-    <dimen name="stationmarker_height">116dp</dimen> <!-- sm_width + sm_arrow_size (usually), alternatively sm_width * (sm_bg_vector_height/ sm_bg_vector_width); maximum height, it will be scaled down by the classes in StopMarker.kt -->
+    <dimen name="stationmarker_width">100dp</dimen> <!-- maximum width, it will be scaled down by the MapActivity -->
+    <dimen name="stationmarker_height">116dp</dimen> <!-- sm_width + sm_arrow_size (usually), alternatively sm_width * (sm_bg_vector_height/ sm_bg_vector_width); maximum height, it will be scaled down by the MapActivity -->
     <dimen name="stationmarker_radius">20dp</dimen> <!-- guesswork; just needed for reference, has no impact on how the stationmarker looks -->
     <dimen name="stationmarker_arrow_size">16dp</dimen>
     <dimen name="stationmarker_icon_padding">15dp</dimen>
