majorly refactored map and marker system, works and does not lag in current state, (TODO:) one lag spike the moment a big model is loaded in, implemented build system for custom map creation and minification including a custom osmosis plugin, fixed some other minor bugs

--- a/src/main/res/layout/activity_map.xml
+++ b/src/main/res/layout/activity_map.xml
@@ -34,12 +34,15 @@
         android:paddingBottom="@dimen/map_copyright_padding_y"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent" >
+
         <TextView
             android:id="@+id/txtMapCopyright"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/mapCopyright"
             android:textColor="@color/foregroundText"
+            android:textColorHighlight="@color/foregroundText"
+            android:textColorLink="@color/foregroundText"
             android:textSize="@dimen/map_copyright_text_size" />
     </LinearLayout>
 
