--- a/src/main/res/layout/activity_main.xml
+++ b/src/main/res/layout/activity_main.xml
@@ -20,7 +20,7 @@
         android:id="@+id/fragmentsMain"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/fillerNavbar"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/spaceToolbarMain" />
@@ -50,9 +50,18 @@
             android:layout_height="wrap_content"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/fillerStatus"
             app:title="@string/appName"
             style="@style/Theme.Echtzeyt.Toolbar" />
+
+        <View
+            android:id="@+id/fillerStatus"
+            android:layout_width="match_parent"
+            android:layout_height="0.001px"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:ignore="PxUsage" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <!--LinearLayout
@@ -522,7 +531,7 @@
         android:id="@+id/btnMenu"
         style="@style/Theme.Echtzeyt.Button.Image.Floating"
         android:contentDescription="@string/btnMenuDescription"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/fillerNavbar"
         app:layout_constraintEnd_toEndOf="parent"
         app:srcCompat="@drawable/ic_menu" />
 
@@ -571,5 +580,14 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:shadowBelow="@id/btnMenu"
         app:text="@string/btnAnnouncementDescription" />
+
+    <View
+        android:id="@+id/fillerNavbar"
+        android:layout_width="match_parent"
+        android:layout_height="0.001px"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        tools:ignore="PxUsage" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
