--- a/src/main/res/layout/fragment_settings_general.xml
+++ b/src/main/res/layout/fragment_settings_general.xml
@@ -22,4 +22,13 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/settingsAutoDarkSwitch" />
 
+    <View
+        android:id="@+id/fillerNavbar"
+        android:layout_width="match_parent"
+        android:layout_height="0.001px"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/settingsDarkModeSwitch"
+        app:layout_constraintStart_toStartOf="parent"
+        tools:ignore="PxUsage" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
