--- a/src/main/res/layout/fragment_settings_map.xml
+++ b/src/main/res/layout/fragment_settings_map.xml
@@ -14,4 +14,13 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <View
+        android:id="@+id/fillerNavbar"
+        android:layout_width="match_parent"
+        android:layout_height="0.001px"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/settingsMapUseMobileDataSwitch"
+        app:layout_constraintStart_toStartOf="parent"
+        tools:ignore="PxUsage" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
