--- a/src/main/res/layout/fragment_settings_realtime.xml
+++ b/src/main/res/layout/fragment_settings_realtime.xml
@@ -3,6 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:paddingTop="@dimen/toolbar_radius">
 
     <com.maddin.echtzeyt.components.DescriptiveSwitch
@@ -81,5 +82,14 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/settingsRealtimeHideCancelledSwitch"
         app:title="@string/settingsRealtimeNegativeTimes" />
+
+    <View
+        android:id="@+id/fillerNavbar"
+        android:layout_width="match_parent"
+        android:layout_height="0.001px"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/settingsRealtimeNegativeTimesSwitch"
+        app:layout_constraintStart_toStartOf="parent"
+        tools:ignore="PxUsage" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
