--- a/src/main/res/layout/activity_settings.xml
+++ b/src/main/res/layout/activity_settings.xml
@@ -65,7 +65,7 @@
         android:id="@+id/btnSettingsSave"
         style="@style/Theme.Echtzeyt.Button.Image.Floating"
         android:contentDescription="@string/btnSettingsDescription"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/fillerNavbar"
         app:layout_constraintEnd_toEndOf="parent"
         app:srcCompat="@drawable/ic_check"
         tools:ignore="DuplicateSpeakableTextCheck" />
