--- a/src/main/res/layout/fragment_realtime.xml
+++ b/src/main/res/layout/fragment_realtime.xml
@@ -104,8 +104,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            android:paddingTop="2dp"
-            android:paddingBottom="44dp">
+            android:paddingTop="2dp">
 
 
             <Button
@@ -142,6 +141,11 @@
                 android:layout_marginBottom="2dp"
                 android:text="@string/realtimeShowFromTime"
                 android:visibility="gone" />
+
+            <View
+                android:id="@+id/realtime_bottomPaddingConnections"
+                android:layout_width="match_parent"
+                android:layout_height="44dp" />
         </LinearLayout>
     </com.maddin.echtzeyt.components.BottomFadeEdgeScrollView>
 
