fixed issue with light/dark mode in the status bar to increase contrast between app color and status bar text and icons, deleted some unnecessary code

--- a/src/main/res/values/values.xml
+++ b/src/main/res/values/values.xml
@@ -96,4 +96,6 @@
     <dimen name="shadow_size_small">8dp</dimen>
 
     <dimen name="padding_negative_safe">-10000dp</dimen>
+
+    <bool name="window_use_dark_status_bar_in_light_mode">true</bool>
 </resources>
