minor improvements to the map view, fixed a bug where the station markers would not load due to too many map updates (-> map always thought it was moving, preventing updates), removed more old unnecessary code, started implementing the connection paths

--- a/src/main/res/values/colors.xml
+++ b/src/main/res/values/colors.xml
@@ -57,6 +57,7 @@
 
     <color name="lineBackgroundDefault">#C0C0C0</color>
     <color name="lineForegroundDefault">#606060</color>
+    <color name="lineColorDefault">@color/foreground</color>
     <color name="lineForegroundHintLight">#404040</color>
     <color name="lineForegroundHintDark">#C0C0C0</color>
     <color name="lineForegroundHintAuto">@color/lineForegroundHintLight</color>
